--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,4 @@
-baseURL = "https://github.com/Staha/"
+baseURL = "https://istaha.github.io/Staha/"
 title = "Taha Latief"
 # for smart copyright line, leave this blank and check [params.copyright]
 copyright = ""
